# NightShift

./: .gitignore  README.md  pyproject.toml
app/: jobs.py  main.py  models.py  optimizer.py  report.py
poc/quantization/: .gitignore  README.md  quantize_numpy.py  quantize_real.py  requirements.txt  results_numpy.json  results_real.json  results_speed_sweep.json  speed_sweep.py
static/: index.html
tests/: test_pipeline.py
